src/objects/TPA_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>email recipients</description>
    <fields>
        <fullName>AllReqTATReport_Query_Size__c</fullName>
        <description>TPA-MC-ESPSFDCTPA-2108</description>
        <label>AllReqTATReport  Query Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Allowed_domain_for_CO__c</fullName>
        <description>This Field contains all allowed email domains for Commercial Owners</description>
        <label>Allowed domain for CO</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TPA_Manual_Vendor_Approval_Size__c</fullName>
        <description>TPA-MC-ESPSFDCTPA-2195</description>
        <label>TPA_Manual_Vendor_Approval_Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Awaiting_Sign_Reminder_To_Client_Tem_Id__c</fullName>
        <label>Awaiting Sign Reminder To Client Tem Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_Url_Public__c</fullName>
        <label>Base Url Public</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Base_Url__c</fullName>
        <label>Base Url</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CSH_Community_Login_Url__c</fullName>
        <description>CSH Community Login URL Address</description>
        <label>CSH Community Login Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Christine_Email_Id__c</fullName>
        <defaultValue>&apos;IMS_TPA_QATeam@us.imshealth.com&apos;</defaultValue>
        <label>Christine Email Id</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientMessageBoardId__c</fullName>
        <defaultValue>&apos;a8j7000000000KC&apos;</defaultValue>
        <label>ClientMessageBoardId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ComplianceId__c</fullName>
        <defaultValue>&apos;01570000002hjnY&apos;</defaultValue>
        <label>ComplianceId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contracts_Mail_Id__c</fullName>
        <description>Mail id of Contracts to which AMA Signed agreement is to be send</description>
        <label>Contracts Mail Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DBL_Contracts_Contact_Email__c</fullName>
        <label>DBL Contracts Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DBL_Contracts_Contact_Id__c</fullName>
        <description>Contact id of DBL Contracts to which AMA Signed agreement is to be send</description>
        <label>DBL Contracts Contact Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deployment_Date__c</fullName>
        <defaultValue>&apos;2015-05-28&apos;</defaultValue>
        <label>Deployment Date</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DirectToClient_LAAD_Ques_Compliance_Temp__c</fullName>
        <description>Direct To Client Notification: LAAD Question &amp;Compliance Template</description>
        <label>DirectToClient:LAAD Ques&amp;Compliance Temp</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Pending_Cancellation_Sign__c</fullName>
        <label>Email Pending Cancellation Sign</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Template_Community_URL__c</fullName>
        <description>Created by Vikram Singh under CR-11410</description>
        <label>Email Template Community URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Template_Site_URL__c</fullName>
        <label>Email Template Site URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enable_Comm_Auto_for_Bulk_Requests__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Comm Auto for Bulk Requests</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Commercial_Review_Automation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Commercial Review Automation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_off_Specific_Tempo_Commercial_Req__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable off Specific Tempo Commercial Req</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exclude_Test_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>False(In Sandboxes)
True(In Prod)</inlineHelpText>
        <label>Exclude Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>French_Vendor_Language__c</fullName>
        <defaultValue>false</defaultValue>
        <label>French Vendor Language</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Generate_TLLA_Automatically__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generate TLLA Automatically</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gilead_Account_Email_Ids__c</fullName>
        <label>Gilead Account Email Ids</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gilead_Account_Ids__c</fullName>
        <label>Gilead Account Ids</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gilead_Request_Submission_Template_Id__c</fullName>
        <label>Gilead Request Submission Template Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Helpful_Hints_Identify_and_Inform_Author__c</fullName>
        <description>Id of Helpful Hints Identify and Inform Authorized Users doc</description>
        <inlineHelpText>Id of Helpful Hints Identify and Inform Authorized Users doc</inlineHelpText>
        <label>Helpful Hints Identify and Inform Author</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Helpful_Hints_Limit_Access__c</fullName>
        <description>Id of Helpful Hints Limit Access document</description>
        <inlineHelpText>Id of Helpful Hints Limit Access document</inlineHelpText>
        <label>Helpful Hints Limit Access</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Helpful_Hints_Limit_Use__c</fullName>
        <description>Id of Helpful Hints Limit Use document</description>
        <inlineHelpText>Id of Helpful Hints Limit Use document</inlineHelpText>
        <label>Helpful Hints Limit Use</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Helpful_Hints_Overview__c</fullName>
        <description>Id of Helpful Hints Overview document.</description>
        <inlineHelpText>Id of Helpful Hints Overview document.</inlineHelpText>
        <label>Helpful Hints Overview</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Helpful_Hints_Prevent_Disclosure__c</fullName>
        <description>Id of Helpful Hints Prevent Disclosure document</description>
        <inlineHelpText>Id of Helpful Hints Prevent Disclosure document</inlineHelpText>
        <label>Helpful Hints Prevent Disclosure</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Helpful_Hints_Return_or_Destroy__c</fullName>
        <description>Id of Helpful Hints Return or Destroy document</description>
        <inlineHelpText>Id of Helpful Hints Return or Destroy document</inlineHelpText>
        <label>Helpful Hints Return or Destroy</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Helpful_Hints_Template_Id__c</fullName>
        <description>Id of TPA_Helpful_Hints email template</description>
        <inlineHelpText>Id of TPA_Helpful_Hints email template</inlineHelpText>
        <label>Helpful Hints Template Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMS_health_logo_url__c</fullName>
        <description>IMS health logo url - Document image link</description>
        <label>IMS health logo url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IQVIA_Client_AMA_Administrator__c</fullName>
        <label>IQVIA Client AMA Administrator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Include_Test_Data_Only_in_DDN_Batch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include Test Data Only in DDN Batch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_Test_Data_Only_in_VendorNoti_BCH__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include Test Data Only in VendorNoti BCH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_Test_Records_in_Exception_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by Vikram Singh under ER-3434</description>
        <label>Include Test Records in Exception Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Internal_SFDC_URL__c</fullName>
        <description>Created by Vikram Singh under CR-11410</description>
        <label>Internal SFDC URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invite_Vendor_Mail_To_Christine__c</fullName>
        <label>Invite Vendor Mail To Christine</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Potential_Vendor_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to hold tpa request vendor side submission state If it&apos;s a potential vendor case or not.</description>
        <label>Is Potential Vendor Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Processing_TPA_Flow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Processing TPA Flow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Show_Message__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Show Message</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Show_Vendor_Message_Board__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Show Vendor Message Board</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Skip_TPA_Triggers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Skip TPA Triggers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Skip_Modify_Additional_Term__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Skip Modify Additional Term</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_TPA_Permanent_Down__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is TPA Permanent Down</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Template_Watermark_Automated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ESPSFDCTPA-1508: This field is to control watermark in APTTUS generated document based on production/sandbox org</description>
        <label>Is Template Watermark Automated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Trace_Tpa_Logs__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Trace Tpa Logs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legal_Review_Email__c</fullName>
        <label>Additional Terms Sec Legal Review Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manual_Review_For_Special_Client_And_Use__c</fullName>
        <description>Client account &quot;Amgen USA&quot; has a special AMA template to be applied for AMA use of &quot;Prescriber List Match only for overlap analysis, no prescriber communication&quot; , so for this it will be going for manual review.</description>
        <label>Manual Review For Special Client And Use</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modify_Agreement_If_Not_System_Admin__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created under ER-3379 

We need to lock down changes by a TProcessor or person with TP Profile access from changing the following statuses 
Awaiting Vendor Submission 
Initializing Vendor</description>
        <inlineHelpText>Lock down status for Awaiting Vendor Submission and Initializing Vendor if not system admin</inlineHelpText>
        <label>Modify Agreement If Not System Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Modify_Agreement_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Modify Agreement Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Monthly_OneKey_Report__c</fullName>
        <label>Monthly OneKey Report</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_CCP_Profile_Ids__c</fullName>
        <description>New CCP License profile ids.</description>
        <inlineHelpText>New CCP License profile ids.</inlineHelpText>
        <label>New CCP Profile Ids</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_DDN_Requirement_Deployment_Date__c</fullName>
        <description>Created under CR-12757 New Requirements for Data Destruction Process</description>
        <label>New DDN Requirement Deployment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_TLLA_Launch_Date__c</fullName>
        <defaultValue>DATE(2016,03,07)</defaultValue>
        <label>New TLLA Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notification_To_Extrct_AMA_Completed_Doc__c</fullName>
        <description>TPA Notification to Extract AMA Completed Document from ‘Signed on Paper&apos; doc</description>
        <label>Notification To Extrct AMA_Completed_Doc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Submission_Form_URL__c</fullName>
        <label>Request Submission Form URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requires_AMA_Data_For_Uses_With_Category__c</fullName>
        <description>Created under ER-2455 :- Uses with category which requires AMA Prescriber Data</description>
        <label>Requires AMA Data For Uses With Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RestrictedDocumentId__c</fullName>
        <defaultValue>&apos;01570000002hjni&apos;</defaultValue>
        <label>RestrictedDocumentId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Restriction_Date_For_Maintenance__c</fullName>
        <description>To specify the date which will restrict all the users from using TPA Portal during maintenance</description>
        <label>Restriction Date For Maintenance</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shared_Email__c</fullName>
        <label>Shared Email</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_Exhibit_Input__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Exhibit Input</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Test_Request__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Helps in showing Test requests in reports</description>
        <label>Show Test Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stop_TLLA_Generation_Notice_Id__c</fullName>
        <label>Stop TLLA Generation Notice Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SystemAdminId__c</fullName>
        <defaultValue>&apos;a6l7000000091GDAAY&apos;</defaultValue>
        <label>SystemAdminId</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TATReport2_Query_Size__c</fullName>
        <description>TPA-MC-ESPSFDCTPA-2043</description>
        <label>TATReport2 Query Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TLLA_Batch_Class_Id__c</fullName>
        <defaultValue>&apos;01pV000000018j6&apos;</defaultValue>
        <label>TLLA Batch Class Id</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TLLA_Batch_Execution_Time__c</fullName>
        <defaultValue>900</defaultValue>
        <label>TLLA Batch Execution Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TLLA_Rescheduler_Execution_Time__c</fullName>
        <label>TLLA Rescheduler Execution Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TPA_50_or_More_Licenses_Email_Ids__c</fullName>
        <label>TPA 50 or More Licenses Email Ids</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TPA_AMA_Fee_Report_Email__c</fullName>
        <label>TPA AMA Fee Report Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TPA_Summary_of_Permitted_Use_Def_Doc_ID__c</fullName>
        <label>TPA Summary of Permitted Use Def Doc ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TPA_Admin_Email_Address__c</fullName>
        <description>All TPA Admin&apos;s Email Addresses.</description>
        <label>TPA Admin Email Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TPA_AllianceTeamManualReview_Email__c</fullName>
        <label>TPA_AllianceTeamManualReview_Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TPA_Auto_Exception_Rpt_Recepients_Legal__c</fullName>
        <description>Created by Vikram Singh under ER-3434</description>
        <label>TPA Auto Exception Rpt Recepients Legal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TPA_Auto_Exception_Rpt_Recepients_Local__c</fullName>
        <description>Created by Vikram Singh under ER-3434</description>
        <label>TPA Auto Exception Rpt Recepients Local</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TPA_BCC_Emails__c</fullName>
        <inlineHelpText>Add ; seperated values</inlineHelpText>
        <label>TPA BCC Emails</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TPA_Batch_Mail_Ids__c</fullName>
        <defaultValue>&apos;chandra.pandey@metacube.com&apos;</defaultValue>
        <label>TPA Batch Mail Ids</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TPA_Batch_to_Attempt_TLLA_Call_Duration__c</fullName>
        <inlineHelpText>Value in minutes</inlineHelpText>
        <label>TPA Batch to Attempt TLLA Call Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TPA_Client_Community_Url__c</fullName>
        <description>TPA-MC-ESPSFDCTPA-496</description>
        <label>TPA Client Community Url</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TPA_Clone_Use_Guide__c</fullName>
        <description>TPA Clone Use Quick Reference Guide IDs</description>
        <label>TPA Clone Use Guide</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TPA_Compliance_Hold_Emails__c</fullName>
        <label>TPA Compliance Hold Emails</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TPA_CommRev_Pagination_Size__c</fullName>
	<defaultValue>200</defaultValue>
        <label>TPA CommRev Pagination Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TPA_DRN_Mails_Copy_To__c</fullName>
        <label>TPA DRN Mails Copy To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TPA_Detail_Report_Filter_Date__c</fullName>
        <label>TPA Detail Report Filter Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TPA_Doc_Access_Link__c</fullName>
        <description>Link to access Public docs</description>
        <label>TPA Doc Access Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TPA_DocuSign_CC_Email_List__c</fullName>
        <label>TPA DocuSign CC Email List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TPA_Email_Target_Object__c</fullName>
        <description>TPA Emails target Contact ID</description>
        <label>TPA Email Target Object</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TPA_Executed_AMA_Agreement_Template__c</fullName>
        <label>TPA Executed AMA Agreement Template</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TPA_External_Client_Reports_Email_Copies__c</fullName>
        <label>TPA External Client Reports Email Copies</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TPA_External_Client_Reports__c</fullName>
        <description>Save Value with the combination (Report Id~Client Email Id;)</description>
        <inlineHelpText>Save Value with the combination (Report Id~Client Email Id;)</inlineHelpText>
        <label>TPA External Client Reports</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TPA_Forgot_UserName_Email__c</fullName>
        <label>TPA Forgot UserName Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TPA_From_Address_For_Data_Release__c</fullName>
        <defaultValue>&apos;0D270000000CbU7&apos;</defaultValue>
        <label>TPA From Address For Data Release</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TPA_From_Orgwide_Email_Id__c</fullName>
        <defaultValue>&apos;0D270000000CbU7&apos;</defaultValue>
        <label>TPA From Orgwide Email Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TPA_Global_User_Group_ID__c</fullName>
        <description>Id of TPA Global User Group</description>
        <label>TPA Global User Group ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TPA_InviteVendor_Email__c</fullName>
        <label>TPA_InviteVendor Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TPA_Log_Report_Recipients__c</fullName>
        <label>TPA Log Report Recipients</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TPA_Log_Tracking_Report_Id__c</fullName>
        <label>TPA Log Tracking Report Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TPA_Mail_ID__c</fullName>
        <description>created by Supriya Johari under CR-11047</description>
        <label>TPA Mail ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TPA_New_Helpful_Hints_Functionality_Date__c</fullName>
        <description>TPA-MC-ESPSFDCTPA-696: Production date when new helpful hint functionality went live.</description>
        <label>TPA New Helpful Hints Functionality Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TPA_NotifyAllianceTeam_Email__c</fullName>
        <label>TPA_NotifyAllianceTeam_Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TPA_QA_and_Admin_Email_Ids__c</fullName>
        <label>TPA QA and Admin Email Ids</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TPA_RequestEdited_Email__c</fullName>
        <description>Mail recipients for the edited request</description>
        <label>TPA_RequestEdited Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TPA_RequestSubmitted_Email__c</fullName>
        <label>TPA_RequestSubmitted Email</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TPA_Send_Emails__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TPA Send Emails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TPA_Supported_Languages__c</fullName>
        <label>TPA Supported Languages</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TPA_Support_Email_Address__c</fullName>
        <defaultValue>&apos;IMSTPProgram@imshealth.com&apos;</defaultValue>
        <label>TPA Support Email Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TPA_Template_Id__c</fullName>
        <defaultValue>&apos;00X700000019Omz&apos;</defaultValue>
        <label>TPA Template Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TPA_To_Suppress_From_Reports__c</fullName>
        <label>TPA To Suppress From Reports</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TPA_Vendor_Link_Reminder_Mail_Template__c</fullName>
        <defaultValue>&apos;00X700000019ghE&apos;</defaultValue>
        <label>TPA Vendor Link Reminder Mail Template</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TP_Nordics_Email_ID__c</fullName>
        <description>Email ID used in case of Vendor Signum</description>
        <label>TP Nordics Email ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TP_US_Mail_Id__c</fullName>
        <description>Mail id of TP US to which AMA Signed agreement is to be send</description>
        <label>TP US Mail Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TermsDocumentId__c</fullName>
        <defaultValue>&apos;01570000002iKfl&apos;</defaultValue>
        <label>TermsDocumentId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Out_Value__c</fullName>
        <defaultValue>1800000</defaultValue>
        <description>Created under ER-3508</description>
        <label>Time Out Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VSN_Cancelation_Confirmation__c</fullName>
        <label>VSN Cancelation Confirmation</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VSN_Client_Contact_Notification_Email__c</fullName>
        <description>Vendor-Specific Notification: Client Contact Notification Email</description>
        <label>VSN Client Contact Notification Email</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VSN_TPProcessorSalesCommunicationResult__c</fullName>
        <label>VSN TPProcessorSalesCommunicationResult</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VSN_TP_Processor_Notification_Email__c</fullName>
        <label>VSN TP Processor Notification Email</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VendorMessageBoardId__c</fullName>
        <defaultValue>&apos;a8j7000000000KH&apos;</defaultValue>
        <label>VendorMessageBoardId</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Community_Username__c</fullName>
        <description>TPA-MC-ESPSFDCTPA-496</description>
        <label>Vendor Community Username</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Community_Userpass__c</fullName>
        <description>TPA-MC-ESPSFDCTPA-496</description>
        <label>Vendor Community Userpass</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Reference_Material_Resource_Link__c</fullName>
        <label>Vendor Reference Material Resource Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Vendor_Reg_Num_Mail_Template_Id__c</fullName>
        <defaultValue>&apos;00X700000019ge1&apos;</defaultValue>
        <label>Vendor Reg Num Mail Template Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Words_Excluded_From_Account_Name__c</fullName>
        <defaultValue>&apos;The,INC,LTD.,LLC&apos;</defaultValue>
        <label>Words Excluded From Account Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>billingAddressMissOnAccRecipientLst__c</fullName>
        <inlineHelpText>Add emails semicolon separated.</inlineHelpText>
        <label>billingAddressMissOnAccRecipientLst</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>clientPrivacyMessageBoardId__c</fullName>
        <label>clientPrivacyMessageBoardId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>TPA Settings</label>
</CustomObject>